# story-sdk-mcp

./: .env.example  .gitignore  CODEOWNERS  README.md  pyproject.toml  server.py
src/services/: story_service.py
src/utils/: address_resolver.py
story-sdk-mcp/: .env.example  README.md  __init__.py  server.py  test.py
story-sdk-mcp/services/: __init__.py  story_service.py
storyscan-mcp/: .env.example  README.md  server.py
storyscan-mcp/services/: storyscan_service.py
utils/: __init__.py  contract_addresses.py
